2009-11-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeDependencyObjectHelper.cs: Added object construction case for
	TimelineMarkerRoutedEventArgs.

	* Kind.cs:
	* GeneratedPInvokes.cs: Regenerated.

	* Events.cs: CreateTimelineMarkerRoutedEventHandlerDispatcher: don't
	have anonymous methods which requires an SSC attribute - the compiler
	generated name isn't stable, and any unrelated change (including
	compiler update) can cause the generated attributes to not work.

2009-11-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs:
	* GeneratedPInvokes.cs: Regenerated.

	* Events.cs: Added CreateLogReadyRoutedEventHandlerDispatcher.

2009-11-17  Jackson Harper  <jackson@ximian.com>

	* MarkupExpressionParser.cs: Implement parsing for RelativeSource
	expressions.

2009-11-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Types.cs: Improve readability. Also use Type.EmptyTypes to
	avoid needless (and repetitive) allocation of an empty array

2009-11-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Helper.cs: Remove old, digest-only, codec integrity check

2009-11-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

	r: sde

2009-11-09  Chris Toshok  <toshok@ximian.com>

	* NativeDependencyObjectHelper.cs (CreateObject): add mappings for
	BitmapCache/CacheMode.

	r: spouliot

2009-11-08  Chris Toshok  <toshok@ximian.com>

	* NativeDependencyObjectHelper.cs (CreateObject): add mappings for
	the out of browser types.

	r: lewing

2009-11-08  Chris Toshok  <toshok@ximian.com>

	* NativeDependencyObjectHelper.cs (CreateObject): add mappings for
	the effect types.

	r: kangaroo

2009-11-05  Alan McGovern  <amcgovern@novell.com>

	* NativeMethods.cs:
	* GeneratedPInvokes.cs: regen. r: toshok

2009-11-05  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* NativeDependencyObjectHelper.cs: Create